--- a/src/App.scss
+++ b/src/App.scss
@@ -1,3 +1,11 @@
+$bodyColor: #f4a261;
+$display: #3db3a5;
+$characters: white;
+$rightSide: #e38738;
+$border: white;
+$top: #a7b6d3;
+
+
 body {
   background-color: #f4a261;
 
@@ -5,15 +13,15 @@ body {
     text-align: center;
   }
   .calculator {
-    border: 1px solid white;
+    border: 1px solid $border;
     height: 385px;
     width: 247px;
     margin: 0 auto;
 
     .display {
       height: 80px;
-      background-color: #2a9d8f;
-      color: white;
+      background-color: $display;
+      color: $characters;
       line-height: 80px;
       font-size: 22px;
       padding: 0 10px;
@@ -25,7 +33,7 @@ body {
     flex-wrap: wrap;
 
     .first {
-      background-color: #787a7e;
+      background-color: $top;
     }
 
     .line {
@@ -35,56 +43,27 @@ body {
     }
 
     .box {
-      border: 1px solid white;
+      border: 1px solid $border;
       height: 60px;
       width: 60px;
       text-align: center;
       line-height: 60px;
-      color: white;
+      color: $characters;
       font-size: 25px;
       font-weight: bolder;
     }
     .box:nth-child(4){
-      background-color: #da7c2a;
+      background-color: $rightSide;
     }
   }
 }
 .Fifth.line{
   .box:nth-child(3){
-    background-color: #da7c2a;
+    background-color: $rightSide;
   }
-}
-.Fifth.line > div:nth-child(1) {
-  width: 122px;
-}
-
-table {
-  height: 350px;
-  width: 250px;
-  margin: 0 auto;
-  text-align: center;
-
-  .result {
-    height: 80px;
-    background-color: #2a9d8f;
-  }
-  td {
-    width: 30px;
-  }
-  .top-left {
-    background-color: #335f70;
-  }
-  .right {
-    background-color: #e9c46a;
+  div:nth-child(1) {
+    width: 122px;
   }
 }
 
-table,
-th,
-td {
-  border: 1px solid black;
-  border-collapse: collapse;
-  background-color: #264653;
-  color: #fff;
-  font-size: 1.3rem;
-}
+
