--- a/src/App.scss
+++ b/src/App.scss
@@ -9,6 +9,33 @@ $top: #a7b6d3;
 body {
   background-color: #f4a261;
 
+  .top-container {
+    min-height: 90vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+
+    .logs{
+      order: 2;
+      width: 247px;
+      min-height: 200px;
+      margin: 0 auto;
+      border: 1px solid $border;
+      color: $characters;
+      text-align: right;
+    
+      .title{
+        text-align: center;
+        padding: 5px 0;
+        text-decoration: underline;
+      }
+      p{
+        margin:0;
+        padding-right: 10px;
+      }
+    }
+  }
+
   .App-header {
     text-align: center;
   }
