--- a/src/App.scss
+++ b/src/App.scss
@@ -8,88 +8,116 @@ $top: #a7b6d3;
 
 body {
   background-color: #f4a261;
+}
 
-  .top-container {
-    min-height: 90vh;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-evenly;
+.top-container {
+  min-height: 90vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
 
-    .logs{
-      order: 2;
-      width: 247px;
-      min-height: 200px;
-      margin: 0 auto;
-      border: 1px solid $border;
-      color: $characters;
-      text-align: right;
-    
-      .title{
-        text-align: center;
-        padding: 5px 0;
-        text-decoration: underline;
-      }
-      p{
-        margin:0;
-        padding-right: 10px;
-      }
-    }
-  }
-
-  .App-header {
-    text-align: center;
-  }
-  .calculator {
-    border: 1px solid $border;
-    height: 385px;
+  .logs{
+    order: 2;
     width: 247px;
+    min-height: 200px;
     margin: 0 auto;
-
-    .display {
-      height: 80px;
-      background-color: $display;
-      color: $characters;
-      line-height: 80px;
-      font-size: 22px;
-      padding: 0 10px;
-      text-align: right;
-    }
-  }
-  .underDisplay {
-    display: flex;
-    flex-wrap: wrap;
-
-    .first {
-      background-color: $top;
-    }
-
-    .line {
-      display: flex;
-      height: 61px;
-      width: 100%;
-    }
-
-    .box {
-      border: 1px solid $border;
-      height: 60px;
-      width: 60px;
+    border: 1px solid $border;
+    color: $characters;
+    text-align: right;
+  
+    .title{
       text-align: center;
-      line-height: 60px;
-      color: $characters;
-      font-size: 25px;
-      font-weight: bolder;
+      padding: 5px 0;
+      text-decoration: underline;
     }
-    .box:nth-child(4){
-      background-color: $rightSide;
+    p{
+      margin:0;
+      padding-right: 10px;
     }
   }
 }
+
+.App-header {
+  text-align: center;
+}
+.calculator {
+  border: 1px solid $border;
+  height: 385px;
+  width: 247px;
+  margin: 0 auto;
+
+  .display {
+    height: 80px;
+    background-color: $display;
+    color: $characters;
+    line-height: 80px;
+    font-size: 22px;
+    padding: 0 10px;
+    text-align: right;
+  }
+}
+.underDisplay {
+  display: flex;
+  flex-wrap: wrap;
+
+  .first {
+    background-color: $top;
+  }
+
+  .line {
+    display: flex;
+    height: 61px;
+    width: 100%;
+  }
+
+  .box {
+    cursor: grab;
+    pointer-events: auto;
+    position: relative;
+    border: 1px solid $border;
+    height: 60px;
+    width: 60px;
+    text-align: center;
+    line-height: 60px;
+    color: $characters;
+    font-size: 25px;
+    font-weight: bolder;
+
+    &:after{
+      content:"";
+      position: absolute;
+      left: 0;
+      width: 60px;
+      height: 60px;
+      border-radius: 8px;
+      background: rgba(0, 0, 0, 0.5);
+      z-index: -1;
+      transition: all 0.1s ease-in;
+    }
+    &:after{
+      transform: scale(0);
+      transform-origin: center;
+    }
+    &:hover:after{
+      transform: scale(1);
+    }
+  }
+  .box:nth-child(4){
+    background-color: $rightSide;
+  }
+}
+
 .Fifth.line{
   .box:nth-child(3){
     background-color: $rightSide;
   }
   div:nth-child(1) {
     width: 122px;
+    
+    &:after{
+      width: 122px;
+      height: 60px;
+    }
   }
 }
 
