modifying characters shrinking implementation

--- a/src/App.scss
+++ b/src/App.scss
@@ -55,6 +55,9 @@ body {
     padding: 0 10px;
     text-align: right;
   }
+  .shrink {
+    font-size: 19px;
+  }
 }
 .underDisplay {
   display: flex;
